--- a/service/pom.xml
+++ b/service/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>service_user</module>
+        <module>service_hosp</module>
     </modules>
 
     <properties>
@@ -23,7 +24,7 @@
     <dependencies>
         <dependency>
             <groupId>com.atguigu</groupId>
-            <artifactId>service-util</artifactId>
+            <artifactId>service_util</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
