--- a/service/service_hosp/src/main/resources/application.properties
+++ b/service/service_hosp/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jackson.time-zone=GMT+8
 #mybatis-plus.mapper-locations=classpath:com/atguigu/syt/mapper/xml/*.xml
 mybatis-plus.mapper-locations=classpath:com/atguigu/syt/mapper/xml/*.xml
 # nacos服务地址
-#spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
 #开启sentinel
 feign.sentinel.enabled=true
@@ -37,3 +37,6 @@ feign.sentinel.enabled=true
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
+
+#开启mybatis-plus日志
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
