--- a/service/service_hosp/pom.xml
+++ b/service/service_hosp/pom.xml
@@ -47,7 +47,7 @@
     </dependencies>
 
     <build>
-        <finalName>service-hosp</finalName>
+        <finalName>service_hosp</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
