--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>service_user</module>
         <module>service_hosp</module>
+        <module>service_cmn</module>
     </modules>
 
     <properties>
@@ -68,6 +69,15 @@
 <!--            <groupId>com.alibaba.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>-->
 <!--        </dependency>-->
+
+
+<!--        Excel的导入到处-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
