--- a/service/service_cmn/src/main/resources/application.properties
+++ b/service/service_cmn/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8202
 # 服务名
-spring.application.name=service_cmn
+spring.application.name=service-cmn
 
 # 环境设置：dev、test、prod
 spring.profiles.active=dev
