--- a/service/service_hosp/src/main/resources/application.properties
+++ b/service/service_hosp/src/main/resources/application.properties
@@ -28,9 +28,9 @@ feign.sentinel.enabled=true
 #spring.cloud.sentinel.transport.dashboard=http://127.0.0.1:8858
 
 #mongodb地址
-#spring.data.mongodb.host=192.168.44.163
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=syt_hosp
+spring.data.mongodb.host=124.222.67.105
+spring.data.mongodb.port=27018
+spring.data.mongodb.database=syt_hosp
 
 #rabbitmq地址
 #spring.rabbitmq.host=127.0.0.1
